Github + Netlify links

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 </form>
 
     <footer>This website was created by Jinoveva Lopes and is open-sourced on
-        <a href="" target="_blank">Github</a>
+        <a href="https://github.com/Jinoveva/recipe-challenge" target="_blank">Github</a>
         and hosted on
-        <a href="" target="_blank">Netlify</a>
+        <a href="https://creamy-samp-and-beef-stew.netlify.app/" target="_blank">Netlify</a>
     </footer>
 
     <script src="src/index.js"></script>
