Substituted links for icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
@@ -177,10 +178,18 @@
 
 </form>
 
-    <footer>This website was created by Jinoveva Lopes and is open-sourced on
-        <a href="https://github.com/Jinoveva/recipe-challenge" target="_blank">Github</a>
-        and hosted on
-        <a href="https://creamy-samp-and-beef-stew.netlify.app/" target="_blank">Netlify</a>
+    <footer>
+   <div class="icon-links">
+    <a href="https://github.com/Jinoveva/recipe-challenge" target="_blank" aria-label="GitHub">
+        <i class='bx bxl-github' width="50px"></i>
+    </a>
+    <a href="https://app.netlify.com/sites/creamy-samp-and-beef-stew/overview" target="_blank" aria-label="Netlify">
+        <i class='bx bxl-netlify'></i>
+    </a>
+    <a href="https://www.linkedin.com/in/jinoveva-lopes-b2ba712b9/" target="_blank" aria-label="Netlify">
+        <i class='bx bxl-linkedin'></i>
+    </a>
+   </div>
     </footer>
 
     <script src="src/index.js"></script>
